# muGPD

./: 404.html  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
configs/: index.html
data/251118/: live_data_chip_w2b_86p6_18112025_D1000_B340.mca  live_data_chip_w2b_86p6_18112025_D1000_B350.mca  live_data_chip_w2b_86p6_18112025_D1000_B360.mca  live_data_chip_w2b_86p6_18112025_D1000_B370.mca  live_data_chip_w2b_86p6_18112025_D1000_B370_1.mca  live_data_chip_w2b_86p6_18112025_D1000_B370_2.mca  live_data_chip_w2b_86p6_18112025_ci5-10-15.mca  live_data_chip_w2b_86p6_18112025_ci5-10-20.mca
data/251127/: live_data_chip27112025b_w7b_86p6_D1000_B320.mca  live_data_chip27112025b_w7b_86p6_D1000_B330.mca  live_data_chip27112025b_w7b_86p6_D1000_B340.mca  live_data_chip27112025b_w7b_86p6_D1000_B350.mca  live_data_chip27112025b_w7b_86p6_D1000_B350_1.mca  live_data_chip27112025b_w7b_86p6_D1000_B360.mca  live_data_chip27112025b_w7b_86p6_D1000_B370.mca  live_data_chip27112025b_w7b_86p6_ci5-10-15mV.mca
data/251128/: live_data_chip28112025_w8b_86p6_CI5_10_15mV.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend1.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend10.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend100.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend11.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend12.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend13.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend14.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend15.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend16.mca  live_data_chip28112025_w8b_86p6_D1000_B350_trend17.mca  (+90 more)
docs/: configs.md  examples.md  guide.md  index.md  release_notes.md
examples/: folder_comparison_example_config.yaml  folder_example_config.yaml  gain_trend_example_config.yaml  index.html  noise_fit_config.yaml  single_example_config.yaml
guide/: index.html
release_notes/: index.html
resources/: config_folders.yaml  config_noise_fit.yaml  config_single.yaml  config_test.yaml
search/: search_index.json
style/: index.html
tests/: conftest.py  test_fileio.py
tools/: release.py
(+223 files in other folders)
