[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis"
dynamic = ["version"]
description = "Package to analyze data for my master thesis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
  { name = "Augusto Cattafesta", email = "a.cattafesta@studenti.unipi.it" }
  ]
dependencies = [
  "aptapy",
  "loguru",
  "matplotlib",
  "numpy",
  "scipy",
  "uncertainties",
  "xraydb",
  "pyyaml",
  "pydantic",
  ]

# Optional dependencies are listed here, grouped into logical sections.
# By default (e.g. upon "pip install .") optional dependencies are not
# installed, but they are when you do, e.g., "pip install .[dev]"
[project.optional-dependencies]
dev = [
    "nox",
    "pylint",
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
  ]
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
  ]

[project.urls]
Homepage = ""
Issues = ""

[project.scripts]
analysis = "analysis.cli:main"

[tool.hatch.version]
path = "src/analysis/_version.py"

# ruff configuration, see
# https://docs.astral.sh/ruff/configuration/
# for the ultimate reference.
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
exclude = ["docs"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (imports)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade (kept safe for py37)
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "NPY", # NumPy-specific best practices
  "PERF" # performance gotchas
  ]
ignore = [
  "C408" # I sometimes like dict() calls better than literal dicts
  ]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-instance-attributes",
  "too-many-locals",
  "use-dict-literal",
  "duplicate-code",
  ]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "x", "y", "z"]

[tool.pylint.'FORMAT']
max-line-length = 100

[tool.mypy]
ignore_missing_imports = true